ci/cluster/services/manifests/envoy-gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: envoy-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: envoy
  addresses:
   - type: IPAddress
     value: 146.235.214.235
  listeners:
  - name: https-api-seebom
    protocol: HTTPS
    port: 443
    hostname: seebom.cncf.io
    tls:
      mode: Terminate
      certificateRefs:
      - name: seebom-tls-gw
        kind: Secret
        group: ""
    allowedRoutes:
      namespaces:
        from: All

  - name: http-seebom
    protocol: HTTP
    port: 80
    hostname: seebom.cncf.io
    allowedRoutes:
      namespaces:
        from: All

  - name: https-api-bomhort
    protocol: HTTPS
    port: 443
    hostname: bomhort.cncf.io
    tls:
      mode: Terminate
      certificateRefs:
      - name: bomhort-tls-gw
        kind: Secret
        group: ""
    allowedRoutes:
      namespaces:
        from: All

  - name: http-bomhort
    protocol: HTTP
    port: 80
    hostname: bomhort.cncf.io
    allowedRoutes:
      namespaces:
        from: All

  - name: https-notes
    protocol: HTTPS
    port: 443
    hostname: notes.cncf.io
    tls:
      mode: Terminate
      certificateRefs:
      - name: codimd-tls
        kind: Secret
        group: ""
    allowedRoutes:
      namespaces:
        from: All

  - name: http-notes
    protocol: HTTP
    port: 80
    hostname: notes.cncf.io
    allowedRoutes:
      namespaces:
        from: All
