ci/cluster/services/manifests/envoy-gateway/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bomhort
  namespace: bomhort
  labels:
    use-shared-gateway: "true"
spec:
  hostnames:
  - seebom.cncf.io
  - bomhort.cncf.io
  parentRefs:
  - name: shared-gateway
    namespace: envoy-gateway
  rules:
  - backendRefs:
    - name: bomhort-ui
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: codimd
  namespace: codimd
  labels:
    use-shared-gateway: "true"
spec:
  hostnames:
  - notes.cncf.io
  parentRefs:
  - name: shared-gateway
    namespace: envoy-gateway
  rules:
  - backendRefs:
    - name: codimd
      namespace: codimd
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /archive
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
  - backendRefs:
    - name: codimd-lfx
      namespace: codimd
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
    sessionPersistence:
      sessionName: codimd-affinity
      type: Cookie
      absoluteTimeout: 1h
      cookieConfig:
        lifetimeType: Permanent
